<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/lightGrey"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:src="@drawable/b2"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_height="90dp"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_mainpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/logo"
        android:background="@drawable/search" />

    <TextView
        android:id="@+id/cate"
        android:layout_width="match_parent"
        android:layout_below="@+id/search_mainpage"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/categories"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/men_women"
        android:layout_below="@+id/cate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/mensuit"
            android:background="#00FFFFFF"
            android:src="@drawable/mensuit"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/men" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="onButtonClick"
                android:src="@drawable/womendress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/women" />

    </LinearLayout>

    </LinearLayout>


    <!--- List -->
    <LinearLayout
        android:layout_below="@+id/men_women"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="12dp"
                android:text="@string/highlight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/nocolor"
                android:text="@string/seeall"
                android:textColor="#ED1256" />
        </RelativeLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="horizontal"
          android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_weight="1"
              android:layout_height="wrap_content">
              <ImageButton
                  android:layout_width="wrap_content"
                  android:id="@+id/dress1"
                  android:background="@color/nocolor"
                  android:layout_centerHorizontal="true"
                  android:src="@drawable/product1"
                  android:layout_height="wrap_content"/>
              <ImageView
                  android:layout_width="50dp"
                  android:id="@+id/dots"
                  android:layout_alignRight="@+id/dress1"
                  android:src="@drawable/ic_more"
                  android:layout_height="50dp"/>

              <TextView
                  android:id="@+id/pdress1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/dress1"
                  android:layout_centerHorizontal="true"
                  android:text="$15.00"
                  android:textColor="#ed1256" />

          </RelativeLayout>
          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_weight="1"
              android:layout_height="wrap_content">
              <ImageButton
                  android:layout_width="wrap_content"
                  android:id="@+id/dress2"
                  android:layout_centerHorizontal="true"
                  android:background="@color/nocolor"
                  android:src="@drawable/product1"
                  android:layout_height="wrap_content"/>
              <ImageView
                  android:layout_width="50dp"
                  android:layout_alignRight="@+id/dress2"
                  android:src="@drawable/ic_more"
                  android:layout_height="50dp"/>

              <TextView
                  android:id="@+id/pdress2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/dress2"
                  android:layout_centerHorizontal="true"
                  android:text="$15.00"
                  android:textColor="#ed1256" />

          </RelativeLayout>
      </LinearLayout>


    </LinearLayout>



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            app:itemIconTint="@color/pinkmain"
            android:layout_alignParentBottom="true"
            app:itemTextColor="@color/grey"
            app:labelVisibilityMode="labeled"
            android:background="@color/white"
            app:menu="@menu/activity_bottiomnav"
            android:layout_height="wrap_content"/>



</RelativeLayout>